unpackaged/main/default/objects/Port_Order_Line__c/Port_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Port Order Line</label>
    <nameField>
        <displayFormat>PONL-{00000000}</displayFormat>
        <label>Port Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Port Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>