unpackaged/main/default/objects/Port_Order_Line__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Port</fullName>
                <default>true</default>
                <label>Port</label>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>