unpackaged/main/default/objects/Port_Order_Line__c/fields/Port_Order_FOC_Date__c.field-meta.xml
<CustomField>
    <fullName>Port_Order_FOC_Date__c</fullName>
    <formula>Port_Order__r.Port_Date_FOC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Port Order FOC Date</label>
    <type>Date</type>
</CustomField>