unpackaged/main/default/objects/Port_Order_Line__c/fields/Port_Order_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Port_Order_Request_Date__c</fullName>
    <formula>Port_Order__r.Requested_Port_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Port Order Request Date</label>
    <type>Date</type>
</CustomField>