unpackaged/main/default/objects/Port_Order_Line__c/validationRules/Port_Order_in_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Port_Order_in_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( Port_Order__r.Status__c,"New")))</errorConditionFormula>
    <errorMessage>The Port Order Status is already is Progress or Completed.  It must be a "New" Status</errorMessage>
</ValidationRule>