unpackaged/main/default/objects/Port_Order_Line__c/listViews/Company_Port_Lines.listView-meta.xml
<ListView>
    <fullName>Company_Port_Lines</fullName>
    <columns>Telephone_Number__c</columns>
    <columns>Action__c</columns>
    <columns>Comment__c</columns>
    <columns>Port_Order__c</columns>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Company Port Lines</label>
    <language>en_US</language>
</ListView>